auto-set container perspective and overflow visible, correct visibility fix

--- a/tests/dummy/app/styles/app.css
+++ b/tests/dummy/app/styles/app.css
@@ -26,7 +26,6 @@ body {
 .liquid-container {
   position: absolute;
   z-index: 0;
-  overflow: visible;
 }
 .liquid-container,
 .liquid-child {
